# FD-ARK

./: LICENSE  README.md
FddPurserPcb/: FddPurserPcb.kicad_pcb  FddPurserPcb.kicad_prl  FddPurserPcb.kicad_pro  FddPurserPcb.kicad_sch
FddPurserPcb/gerber/: FddPurserPcb-B_Cu.gbl  FddPurserPcb-B_Mask.gbs  FddPurserPcb-Edge_Cuts.gm1  FddPurserPcb-F_Cu.gtl  FddPurserPcb-F_Mask.gts  FddPurserPcb-F_Silkscreen.gto  FddPurserPcb.drl
RasPiPico/firmware/: CMakeLists.txt  README.txt  how_to_build.txt
RasPiPico/firmware/fd-ark/: CMakeLists.txt  ctrlfd_core0_task.cpp  ctrlfd_core0_task.h  ctrlfd_core1_task.cpp  ctrlfd_core1_task.h  def_gpio.h  emu_core0_task.cpp  emu_core0_task.h  emu_core1_task.cpp  emu_core1_task.h  extio.cpp  extio.h  fd-ark.cpp  fd-ark.pio  gamen.h  global.cpp  global.h  if_fddpurser.h  lcd.cpp  lcd.h  sdfat.cpp  sdfat.h  timerobj.cpp  timerobj.h  title.cpp  title.h  trackdata.h
RasPiPico/firmware/fd-ark/ff/: diskio.h  ffconf.h  mmc_pico_spi.c
docs/: FD-ARK-06A_部品表.xlsx
